# Hiillos

./: .gitignore  CMakeLists.txt  README.md  mingw_build.bat  msvc_build.bat  run.bat
.github/workflows/: hiillos.yml
app/: hiillos_app.cc  hiillos_app.h  hiillos_handler.cc  hiillos_handler.h  hiillos_handler_linux.cc  hiillos_handler_mac.mm  hiillos_handler_win.cc  hiillos_linux.cc  hiillos_mac.mm  hiillos_win.cc  window_provider.h
app/linux/: desktop.in
cmake/: hiillos.cmake
extension/: extension.cpp  extension.h  native.h  native_linux.cpp  native_mac.mm  native_win.cpp  ws.cpp
